[package]
name = "evina"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
chrono.workspace = true
fake = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
regex.workspace = true
boa_engine.workspace = true
md-5.workspace = true
hex.workspace = true
serde_json.workspace = true
shell-words.workspace = true
cookie.workspace = true

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
