[package]
name = "evina"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio-retry.workspace = true
tokio = { workspace = true, features = ["full"] }
cookie.workspace = true
history.workspace = true
evina-core.workspace = true
logger-rust.workspace = true

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

