[package]
name = "evina-core"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
boa_engine.workspace = true
fake = { workspace = true, features = ["derive"] }
logger-rust.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["full"] }
cookie.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
md-5.workspace = true
chrono.workspace = true
tokio-retry.workspace = true
hex.workspace = true
shell-words.workspace = true




